--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "node-fetch": "^2.6.9"
+		"dependencies": {
+				"axios": "^1.7.9",
+				"express": "^4.18.2",
+				"cors": "^2.8.5",
+				"node-fetch": "^2.6.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
