--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "node-fetch": "^2.6.9"
   },
   "devDependencies": {
